--- a/3060/immich-app/docker-compose.yml
+++ b/3060/immich-app/docker-compose.yml
@@ -108,30 +108,30 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx-proxy
-    volumes:
-      - /mnt/nvme/immich-app/nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf
-        #      - /mnt/certificates/certificates/_.aquino.network.issuer.crt:/etc/nginx/cert/_.aquino.network.issuer.crt
-        #      - /mnt/certificates/certificates/_.aquino.network.crt:/etc/nginx/cert/_.aquino.network.crt
-        #      - /mnt/certificates/certificates/_.aquino.network.key:/etc/nginx/cert/_.aquino.network.key
-        # - /mnt/certificates/certificates:/etc/nginx/cert/
-      - certs:/etc/nginx/cert/
-    ports:
-      - 80:80
-      - 443:443
-    networks:
-      exposed:
-          ipv4_address: 192.168.23.100
-      default:
-          aliases:
-            - immich
-    links:
-      - immich-server
-    depends_on:
-      - immich-server
-    restart: always
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx-proxy
+  #   volumes:
+  #     - /mnt/nvme/immich-app/nginx/reverse_proxy.conf:/etc/nginx/conf.d/default.conf
+  #       #      - /mnt/certificates/certificates/_.aquino.network.issuer.crt:/etc/nginx/cert/_.aquino.network.issuer.crt
+  #       #      - /mnt/certificates/certificates/_.aquino.network.crt:/etc/nginx/cert/_.aquino.network.crt
+  #       #      - /mnt/certificates/certificates/_.aquino.network.key:/etc/nginx/cert/_.aquino.network.key
+  #       # - /mnt/certificates/certificates:/etc/nginx/cert/
+  #     - certs:/etc/nginx/cert/
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   networks:
+  #     exposed:
+  #         ipv4_address: 192.168.23.100
+  #     default:
+  #         aliases:
+  #           - immich
+  #   links:
+  #     - immich-server
+  #   depends_on:
+  #     - immich-server
+  #   restart: always
 
 volumes:
   model-cache:
@@ -148,13 +148,13 @@ volumes:
 networks:
   default:
     name: immich_default
-  exposed:
-    name: immich_exposed
-    driver: ipvlan  
-    ipam:
-      driver: default
-      config: 
-        - subnet: "192.168.22.0/23"
-          gateway: "192.168.22.1"
-    driver_opts:
-      parent: enp1s0
+  # exposed:
+  #   name: immich_exposed
+  #   driver: ipvlan  
+  #   ipam:
+  #     driver: default
+  #     config: 
+  #       - subnet: "192.168.22.0/23"
+  #         gateway: "192.168.22.1"
+  #   driver_opts:
+  #     parent: enp1s0
