--- a/3060/forgejo/docker-compose.yml
+++ b/3060/forgejo/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       default:
           ipv4_address: 192.168.23.102
     volumes:
-      - /mnt/nvme/forgejo:/forgejo
-      - /mnt/nvme/forgejo/conf/app.ini:/data/gitea/conf/app.ini:ro
+      - /mnt/nvme/forgejo:/data/gitea
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
