--- a/3060/forgejo/app.ini
+++ b/3060/forgejo/app.ini
@@ -33,17 +33,17 @@ DB_TYPE = sqlite3
 HOST = localhost
 NAME = forgejo
 PASSWD =
-PATH = /forgejo/forgejo.db
+PATH = /data/gitea/forgejo.db
 SSL_MODE = disable
 USER = root
 
 [indexer]
-ISSUE_INDEXER_PATH = /forgejo/indexers/issues.bleve
+ISSUE_INDEXER_PATH = /data/gitea/indexers/issues.bleve
 
 [log]
 LEVEL = Info
 MODE = file
-ROOT_PATH = /forgejo/log
+ROOT_PATH = /data/gitea/log
 
 [mailer]
 ENABLED = true
@@ -57,7 +57,7 @@ FROM = renato.aquino@gmail.com
 JWT_SECRET = 1PASSWORD
 
 [picture]
-AVATAR_UPLOAD_PATH = /forgejo/data/avatars
+AVATAR_UPLOAD_PATH = /data/gitea/data/avatars
 DISABLE_GRAVATAR = false
 ENABLE_FEDERATED_AVATAR = false
 
@@ -68,7 +68,7 @@ ROOT = /forgejo/forgejo-repositories
 SCRIPT_TYPE = sh
 
 [repository.upload]
-TEMP_PATH = /forgejo/data/tmp/uploads
+TEMP_PATH = /data/gitea/data/tmp/uploads
 
 [security]
 INSTALL_LOCK = true
@@ -77,10 +77,10 @@ SECRET_KEY = 1PASSWORD
 
 [session]
 PROVIDER = file
-PROVIDER_CONFIG = /forgejo/data/sessions
+PROVIDER_CONFIG = /data/gitea/data/sessions
 
 [server]
-APP_DATA_PATH = /forgejo/data
+APP_DATA_PATH = /data/gitea/data
 DISABLE_SSH = false
 DOMAIN = forge.aquino.network
 HTTP_ADDR = 127.0.0.1
