--- a/3060/forgejo/docker-compose.yml
+++ b/3060/forgejo/docker-compose.yml
@@ -8,15 +8,14 @@ services:
     restart: always
     networks:
       default:
-          ipv4_address: 192.168.23.102
     volumes:
       - /mnt/nvme/forgejo:/data/gitea
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
       - '3000:3000'
-      - '222:22'
+      - '22:22'
 networks:
   default:
-    name: external
+    name: default
     external: true
