--- a/3060/nginx/docker-compose.yaml
+++ b/3060/nginx/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       # Uncomment this if IPv6 is not enabled on your host
       # DISABLE_IPV6: 'true'
     networks:
-      default:
+      external:
           ipv4_address: 192.168.23.101
 
     volumes:
@@ -34,7 +34,7 @@ volumes:
       device: /mnt/nvme/nginx/data
 
 networks:
-  default:
+  external:
     name: external
     driver: ipvlan
     ipam:
@@ -45,4 +45,7 @@ networks:
     driver_opts:
       parent: enp1s0
   immich_default:
+    external: true
+  default:
+    name: default
     external: true
