--- a/3060/nginx/docker-compose.yaml
+++ b/3060/nginx/docker-compose.yaml
@@ -18,9 +18,9 @@ services:
       # Uncomment this if IPv6 is not enabled on your host
       # DISABLE_IPV6: 'true'
     networks:
+      default:
       external:
           ipv4_address: 192.168.23.101
-      default:
 
     volumes:
       - data:/data
@@ -35,6 +35,9 @@ volumes:
       device: /mnt/nvme/nginx/data
 
 networks:
+  default:
+    name: aquinet
+    external: true
   external:
     name: external
     driver: ipvlan
@@ -46,7 +49,5 @@ networks:
     driver_opts:
       parent: enp1s0
   immich_default:
-    external: true
-  default:
-    name: aquinet
+    name: immich_default
     external: true
