--- a/3060/nginx/docker-compose.yaml
+++ b/3060/nginx/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   app:
     image: 'jc21/nginx-proxy-manager:latest'
     restart: unless-stopped
+    container_name: nginx-proxy
     ports:
       # These ports are in format <host-port>:<container-port>
       - '80:80' # Public HTTP Port
@@ -18,10 +19,9 @@ services:
       # Uncomment this if IPv6 is not enabled on your host
       # DISABLE_IPV6: 'true'
     networks:
-      default:
-
       external:
           ipv4_address: 192.168.23.100
+      default:
 
     volumes:
       - data:/data
