--- a/3060/karakeep/docker-compose.yaml
+++ b/3060/karakeep/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       # If you want to mount a custom directory, change the volume mapping to:
       # - /path/to/your/directory:/data
       - data:/data
-    ports:
-      - 3001:3000
+#    ports:
+#      - 3001:3000
     env_file:
       - .env
     environment:
