--- a/3060/forgejo/docker-compose.yml
+++ b/3060/forgejo/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       - /mnt/nvme/forgejo:/data/gitea
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-    ports:
-      - '3000:3000'
-      - '22:22'
+#    ports:
+#      - '3000:3000'
+#      - '22:22'
 networks:
   default:
     name: aquinet
