--- a/3060/homepage/docker-compose.yml
+++ b/3060/homepage/docker-compose.yml
@@ -12,3 +12,7 @@ services:
       - /mnt/nvme/homepage:/app/config # Make sure your local config directory exists
       # - /var/run/docker.sock:/var/run/docker.sock:ro # optional, for docker integrations
     restart: unless-stopped
+networks:
+  default:
+    name: aquinet
+    external: true    
