--- a/3060/nginx/docker-compose.yaml
+++ b/3060/nginx/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
     volumes:
       - data:/data
       - /etc/letsencrypt:/etc/letsencrypt
+      - /etc/cloudflare.ini:/etc/cloudflare.ini
 
 volumes:
   data:
