--- a/3060/dumbassets/docker-compose.yaml
+++ b/3060/dumbassets/docker-compose.yaml
@@ -4,16 +4,16 @@ services:
     image: dumbwareio/dumbassets:latest
     restart: unless-stopped
     ports: 
-      - ${DUMBASSETS_PORT:-3001}:3001
+      - 3002:3000
     volumes:
       - ${DUMBASSETS_DATA_PATH:-./data}:/app/data
     environment:
-      NODE_ENV: ${DUMBASSETS_NODE_ENV:-production}
-      DEBUG: ${DUMBASSETS_DEBUG:-true}
-      SITE_TITLE: ${DUMBASSETS_SITE_TITLE:-DumbAssets}
-      BASE_URL: ${DUMBASSETS_BASE_URL:-https://da.aquino.network}
-      DUMBASSETS_PIN: ${DUMBASSETS_PIN:-8307}
-      ALLOWED_ORIGINS: ${DUMBASSETS_ALLOWED_ORIGINS:-*}
-      APPRISE_URL: ${DUMBASSETS_APPRISE_URL:-}
+      NODE_ENV: production
+      DEBUG: true
+      SITE_TITLE: DumbAssets
+      BASE_URL: https://da.aquino.network
+      DUMBASSETS_PIN: 8307
+      ALLOWED_ORIGINS: *
       CURRENCY_CODE: ${DUMBASSETS_CURRENCY_CODE:-BRL}
       CURRENCY_LOCALE: ${DUMBASSETS_CURRENCY_LOCALE:-pt-BR}
+      TZ: America/Sao_Paulo
