--- a/3060/freshrss/docker-compose.yaml
+++ b/3060/freshrss/docker-compose.yaml
@@ -27,3 +27,7 @@ services:
     #   start_interval: 11s
     #   interval: 75s
     #   retries: 3
+networks:
+  default:
+    name: aquinet
+    external: true    
